# weather_api

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
app/: main.py  settings.py
app/api/: __init__.py  dependency.py  weather.py
app/domain/: __init__.py  cache_entry.py  weather.py  weather_log.py
app/domain/repositories/: __init__.py  cache.py  logging.py  storage.py
app/infrastracture/: __init__.py
app/infrastracture/cache/: __init__.py  memory_cache.py
app/infrastracture/logging/: __init__.py  local_logging.py
app/infrastracture/storage/: __init__.py  factory_storage.py  local_storage.py  s3_storage.py
app/schemas/: __init__.py  weather.py
app/services/: weather_service.py
app/tests/: conftest.py  test_cache.py  test_logging.py  test_storage.py  test_weather_api.py  test_weather_service.py
